GNU bug report logs - #17406
C-g C-g in GC causes crash

Previous Next

Package: emacs;

Reported by: rms <at> gnu.org

Date: Mon, 5 May 2014 07:01:04 UTC

Severity: normal

Merged with 17395, 28279

Found in version 25.2

Fixed in version 26.1

Done: Glenn Morris <rgm <at> gnu.org>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 17406 in the body.
You can then email your comments to 17406 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-gnu-emacs <at> gnu.org:
bug#17406; Package emacs. (Mon, 05 May 2014 07:01:04 GMT) Full text and rfc822 format available.

Acknowledgement sent to rms <at> gnu.org:
New bug report received and forwarded. Copy sent to bug-gnu-emacs <at> gnu.org. (Mon, 05 May 2014 07:01:05 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Richard Stallman <rms <at> gnu.org>
To: bug-gnu-emacs <at> gnu.org
Subject: C-g C-g in GC causes crash
Date: Mon, 05 May 2014 03:00:06 -0400
[[[ To any NSA and FBI agents reading my email: please consider    ]]]
[[[ whether defending the US Constitution against all enemies,     ]]]
[[[ foreign or domestic, requires you to follow Snowden's example. ]]]

When GC starts taking a long time, I can easily type C-g C-g during a
GC if I have garbage-collection-messages set.  This stops Emacs as it
should.  When I continue it, it asks (correctly) if I want to abort
and dump core.  I say no, and then it crashes.

A backtrace showed me why: tty_send_additional_strings calls
Fterminal_parameter which calls Fassq which does QUIT;

-- 
Dr Richard Stallman
President, Free Software Foundation
51 Franklin St
Boston MA 02110
USA
www.fsf.org  www.gnu.org
Skype: No way! That's nonfree (freedom-denying) software.
  Use Ekiga or an ordinary phone call.





Merged 17406 28279. Request was from Glenn Morris <rgm <at> gnu.org> to control <at> debbugs.gnu.org. (Tue, 29 Aug 2017 19:38:01 GMT) Full text and rfc822 format available.

Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#17406; Package emacs. (Mon, 18 Sep 2017 05:11:01 GMT) Full text and rfc822 format available.

Message #10 received at 17406 <at> debbugs.gnu.org (full text, mbox):

From: Paul Eggert <eggert <at> cs.ucla.edu>
To: Eric Hoffman <yuri <at> tenuki.org>
Cc: 17406 <at> debbugs.gnu.org, 28279 <at> debbugs.gnu.org,
 Richard Stallman <rms <at> gnu.org>
Subject: Re: 25.2; repeatable crash when hitting C-g twice
Date: Sun, 17 Sep 2017 22:10:10 -0700
[Message part 1 (text/plain, inline)]
Eli's suggestion looks good. I tweaked his patch slightly to avoid some calls 
and installed the attached into the emacs-26 branch to implement it. Please give 
it a try.
[0001-Avoid-crash-with-C-g-C-g-in-GC.patch (text/x-patch, attachment)]

bug marked as fixed in version 26.1, send any further explanations to 28279 <at> debbugs.gnu.org and Eric Hoffman <yuri <at> tenuki.org> Request was from Glenn Morris <rgm <at> gnu.org> to control <at> debbugs.gnu.org. (Mon, 20 Nov 2017 22:42:03 GMT) Full text and rfc822 format available.

Forcibly Merged 17395 17406 28279. Request was from Glenn Morris <rgm <at> gnu.org> to control <at> debbugs.gnu.org. (Mon, 20 Nov 2017 22:45:02 GMT) Full text and rfc822 format available.

bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Tue, 19 Dec 2017 12:24:04 GMT) Full text and rfc822 format available.

This bug report was last modified 7 years and 183 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.